adding fonts, setting up week info section markup

--- a/app/views/welcome/_header.html.haml
+++ b/app/views/welcome/_header.html.haml
@@ -4,8 +4,8 @@
     .row
       .col-lg-12
         .intro-message
-          %h1
+          %h1.title-1
             The classroom
-          %h3
+          %h3.title-2
             The place where you find all the school info
 
