--- a/app/assets/stylesheets/the_classroom/the_classroom.scss
+++ b/app/assets/stylesheets/the_classroom/the_classroom.scss
@@ -1,3 +1,12 @@
 @import 'bootstrap';
 
+@import 'fonts';
+@import 'colors';
+@import 'functions';
+@import 'bootstrap_custom';
+@import 'skin';
+
+@import 'title';
+
 @import 'custom_components/image_icon';
+@import 'custom_components/weekday';
