running pronto and making the first fixes

--- a/app/assets/stylesheets/the_classroom/functions.scss
+++ b/app/assets/stylesheets/the_classroom/functions.scss
@@ -2,8 +2,8 @@
   @return $num / ($num * 0 + 1);
 }
 
-@mixin font-size-rem-px($pxValue) {
-  $rem-value: $pxValue / strip-unit($base-font-size);
-  font-size: #{$pxValue}px;
+@mixin font-size-rem-px($pixel-value) {
+  $rem-value: $pixel-value / strip-unit($base-font-size);
+  font-size: #{$pixel-value}px;
   font-size: #{$rem-value}rem;
 }
