--- a/app/views/welcome/_services.html.haml
+++ b/app/views/welcome/_services.html.haml
@@ -1,4 +1,4 @@
-%a{:name => "services"}
+%a{ name: 'services' }
 .content-section-a
   .container
     .row
@@ -11,8 +11,8 @@
           Special Thanks
         %p.lead
           A special thanks to
-          %a{:href => "http://join.deathtothestockphoto.com/", :target => "_blank"} Death to the Stock Photo
+          %a{ href: '#', target: '_blank' } Death to the Stock Photo
           for providing the photographs that you see in this template. Visit their website to become a member.
       .col-lg-5.col-lg-offset-2.col-sm-6
-        %img.img-responsive{:alt => "", :src => "img/ipad.png"}/
+        %img.img-responsive{ alt: '', src: 'img/ipad.png' }
   / /.container
