--- a/app/views/layouts/partial-general/_footer.html.haml
+++ b/app/views/layouts/partial-general/_footer.html.haml
@@ -4,14 +4,14 @@
       .col-lg-12
         %ul.list-inline
           %li
-            %a{:href => "#"} Home
+            %a{ href: '#' } Home
           %li.footer-menu-divider ⋅
           %li
-            %a{:href => "#about"} About
+            %a{ href: '#about' } About
           %li.footer-menu-divider ⋅
           %li
-            %a{:href => "#services"} Services
+            %a{ href: '#services' } Services
           %li.footer-menu-divider ⋅
           %li
-            %a{:href => "#contact"} Contact
+            %a{ href: '#contact' } Contact
         %p.copyright.text-muted.small Copyright © Your Company 2014. All Rights Reserved
