--- a/app/views/welcome/_banner.html.haml
+++ b/app/views/welcome/_banner.html.haml
@@ -1,4 +1,4 @@
-%a{:name => "contact"}
+%a{ name: 'contact' }
 .banner
   .container
     .row
@@ -7,15 +7,15 @@
       .col-lg-6
         %ul.list-inline.banner-social-buttons
           %li
-            %a.btn.btn-default.btn-lg{:href => "https://twitter.com/SBootstrap"}
+            %a.btn.btn-default.btn-lg{ href: '#' }
               %i.fa.fa-twitter.fa-fw
               %span.network-name Twitter
           %li
-            %a.btn.btn-default.btn-lg{:href => "https://github.com/IronSummitMedia/startbootstrap"}
+            %a.btn.btn-default.btn-lg{ href: '#' }
               %i.fa.fa-github.fa-fw
               %span.network-name Github
           %li
-            %a.btn.btn-default.btn-lg{:href => "#"}
+            %a.btn.btn-default.btn-lg{ href: '#' }
               %i.fa.fa-linkedin.fa-fw
               %span.network-name Linkedin
 
