--- a/app/views/welcome/_header.html.haml
+++ b/app/views/welcome/_header.html.haml
@@ -4,7 +4,7 @@
     .row
       .col-lg-12
         .intro-message
-          %h1.title-1
+          %h1.title-1.title-wide
             The classroom
           %h3.title-2
             The place where you find all the school info
