--- a/app/assets/stylesheets/the_classroom/title.scss
+++ b/app/assets/stylesheets/the_classroom/title.scss
@@ -2,8 +2,7 @@
 
 .title-1 {
   @extend %font-site-title;
-  @include font-size-rem-px(40);
-  letter-spacing: 1.5rem;
+  font-size: 40px;
 }
 
 .title-2 {
@@ -14,4 +13,17 @@
 .title {
   @extend %font-site-bold;
   font-size: 16px;
+}
+
+.inline-title {
+  display: inline;
+  vertical-align: middle;
+}
+
+.title-wide {
+  letter-spacing: 1.5rem;
+}
+
+.title-stretch{
+  letter-spacing: 2px;
 }
