--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type" }/
     %title Theclassroom
     = csrf_meta_tags
+    = favicon_link_tag 'assets/theclassroom.png'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
@@ -11,4 +12,6 @@
       = notice
     .alert
       = alert
-    = yield
+    .wrapper
+      = render partial: 'layouts/partial-general/header'
+      = yield
