styling devise views

--- a/app/assets/stylesheets/the_classroom/the_classroom.scss
+++ b/app/assets/stylesheets/the_classroom/the_classroom.scss
@@ -8,6 +8,7 @@
 
 @import 'title';
 
+@import 'custom_components/menu';
 @import 'custom_components/image_icon';
 @import 'custom_components/weekday';
 @import 'custom_components/calendar';
