--- a/app/views/layouts/partial-general/_header.html.haml
+++ b/app/views/layouts/partial-general/_header.html.haml
@@ -3,3 +3,5 @@
     = image_tag 'theclassroom.png', class: 'image-icon'
     %h1.title-1.inline-title.title-stretch
       = site_title
+  .pull-right.menu-area
+    = render_top_view
