--- a/app/assets/stylesheets/the_classroom/custom_components/menu.scss
+++ b/app/assets/stylesheets/the_classroom/custom_components/menu.scss
@@ -1,3 +1,12 @@
 .menu-area {
   padding: 15px;
 }
+
+.dropdown-menu-container {
+  display: inline;
+}
+
+.dropdown-menu-right {
+  top: auto;
+  text-align: right;
+}
