sessions form structure

--- a/app/assets/stylesheets/the_classroom/the_classroom.scss
+++ b/app/assets/stylesheets/the_classroom/the_classroom.scss
@@ -13,6 +13,7 @@
 @import 'custom_components/menu';
 @import 'custom_components/buttons';
 @import 'custom_components/lists';
+@import 'custom_components/sections';
 @import 'custom_components/image_icon';
 @import 'custom_components/weekday';
 @import 'custom_components/calendar';
