--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,7 +1,8 @@
 .container
-  .section-title
-    %h2 Forgot your password?
-  .section-body
+  %section.section-heading.panel-heading
+    %h2.section-title
+      Forgot your password?
+  %section.section-body.panel-body
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
       = devise_error_messages!
       .field
