--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,8 +1,8 @@
 .container
-  .section-title
-    %h2
+  %section.section-heading.panel-heading
+    %h2.section-title
       Edit #{resource_name.to_s.humanize}
-  .section-body
+  %section.section-body.panel-body
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
       = devise_error_messages!
       .field
