--- a/app/assets/stylesheets/the_classroom/bootstrap_customize.scss
+++ b/app/assets/stylesheets/the_classroom/bootstrap_customize.scss
@@ -1,3 +1,7 @@
 $brand-primary: $site-color;
-
+// buttons
 $btn-primary-color: $site-color;
+// links
+$link-color: $site-color;
+$link-hover-color: $color-green-1;
+$link-hover-decoration: none;
