--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *= require landing-page
  *= require font-awesome
+ *= require bootstrap-datetimepicker
  *= require the_classroom/the_classroom
 
  *= require_self
