--- a/app/views/layouts/partial-general/_header_menu.html.haml
+++ b/app/views/layouts/partial-general/_header_menu.html.haml
@@ -7,4 +7,6 @@
     %li.list-item
       = link_to 'Calendar', calendar_show_path
     %li.list-item
+      = link_to 'Events', events_path
+    %li.list-item
       = link_to 'Log out', destroy_user_session_path, method: :delete
