--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -17,7 +17,6 @@
     %p
       %b User:
       = @event.user_id
-
-    = link_to 'Edit', edit_event_path(@event)
-    \|
-    = link_to 'Back', events_path
+  %section.panel-footer.bg-primary
+    = link_to 'Back', events_path, class: 'btn btn-primary'
+    = link_to 'Edit', edit_event_path(@event), class: 'btn btn-primary'
