events for day of week

--- a/app/assets/stylesheets/the_classroom/bootstrap_customize.scss
+++ b/app/assets/stylesheets/the_classroom/bootstrap_customize.scss
@@ -5,3 +5,5 @@ $btn-primary-color: $site-color;
 $link-color: $site-color;
 $link-hover-color: $color-green-1;
 $link-hover-decoration: none;
+// wells
+$well-bg: $site-color;
