--- a/app/assets/stylesheets/the_classroom/the_classroom.scss
+++ b/app/assets/stylesheets/the_classroom/the_classroom.scss
@@ -20,3 +20,4 @@
 @import 'custom_components/calendar';
 @import 'custom_components/bootstrap-datepicker';
 @import 'custom_components/panels';
+@import 'custom_components/wells';
