--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,4 +1,3 @@
-%p#notice= notice
 .container
   %section.section-heading.panel-heading
     %h2.section-title
@@ -10,10 +9,10 @@
       = @event.description
     %p
       %b Start:
-      = @event.start_time
+      = @event.start_time.meridian_hour
     %p
       %b End:
-      = @event.end_time
+      = @event.end_time.meridian_hour
     %p
       %b User:
       = @event.user_id
