--- a/app/views/scaffold/widgets/weekday_card/_day_event.html.haml
+++ b/app/views/scaffold/widgets/weekday_card/_day_event.html.haml
@@ -10,5 +10,5 @@
       .event-time
         %i.fa.fa-clock-o
         %span
-          = "#{event.start_time.strftime('%I:%M%p')} - #{event.end_time.strftime('%I:%M%p')}"
+          = "#{event.start_time.meridian_hour} - #{event.end_time.meridian_hour}"
 
